updating twitter project with following and unfollowing

--- a/tech_talent_twitter/src/main/resources/templates/login.html
+++ b/tech_talent_twitter/src/main/resources/templates/login.html
@@ -8,8 +8,11 @@
 </head>
 
 <body>
+
+    <div th:replace="fragments/navbar :: navbar"></div>
+    
     <div class="container">
-        <h2>Welcome!</h2> 
+        <h2>Welcome to TTS Twitter!</h2> 
         <form th:action="@{/login}" method="post"><br/>
             <input type="text" id="username" name="username" th:placeholder="Username" class="form-control"/> <br/>
             <input type="password" th:placeholder="Password" id="password" name="password" class="form-control"/> <br/>
