--- a/tech_talent_twitter/src/main/resources/templates/feed.html
+++ b/tech_talent_twitter/src/main/resources/templates/feed.html
@@ -7,6 +7,9 @@
     
 </head>
 <body>
+
+    <div th:replace="fragments/navbar :: navbar"></div>
+
     <div class="container">
         <h2>Tweets</h2>
         <div th:each="tweet:${tweetList}">
