--- a/tech_talent_twitter/src/main/resources/templates/newTweet.html
+++ b/tech_talent_twitter/src/main/resources/templates/newTweet.html
@@ -9,6 +9,7 @@
 
 
 <body>
+    <div th:replace="fragments/navbar :: navbar"></div>
     <div class="container">
         <div class="jumbotron col-md-8 col-md-offset-2">
             <h2>New Tweet</h2><br/>
