--- a/tech_talent_twitter/src/main/resources/templates/fragments/navbar.html
+++ b/tech_talent_twitter/src/main/resources/templates/fragments/navbar.html
@@ -3,30 +3,40 @@
   xmlns:th="http://www.thymeleaf.org"
   xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
 >
-<head> </head>
-<body>
+  <head> </head>
+  <body>
     <div th:fragment="navbar">
-<nav class="row navbar navbar-inverse">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="#" style="color: #00aced">
-                <i class="fab fa-twitter"></i> Tech Talent Twitter</a>
-        </div>
-        <div id="navbar">
-            <ul class="nav navbar-nav" sec:authorize="isAuthenticated()">
-                <li><a href="/tweets">Home</a></li>
-                <li><a href="/tweets/new">New Tweet</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li sec:authorize="isAuthenticated()"><a style="pointer-events: none;color: #00aced">
-                  @<span sec:authentication="name"></span></a>
-                <li sec:authorize="isAuthenticated()"><a href="../logout">Logout</a></li>
-                <li sec:authorize="!isAuthenticated()"><a href="../login">Login</a></li>
-             </ul>
-             </div>
+      <nav class="row navbar navbar-inverse">
+        <div class="container-fluid">
+          <div class="container">
+            <div class="navbar-header">
+              <a class="navbar-brand" href="/tweets" style="color: #00aced;"
+                ><i class="fab fa-twitter"></i> Tech Talent Twitter</a
+              >
             </div>
-            </nav>
-
+            <div id="navbar">
+              <ul class="nav navbar-nav" sec:authorize="isAuthenticated()">
+                <li><a href="/tweets">Home</a></li>
+                <li><a href="/users">Users</a></li>
+                <li><a href="/tweets/new">New Tweet</a></li>
+              </ul>
+              <ul class="nav navbar-nav navbar-right">
+                <li sec:authorize="isAuthenticated()">
+                  <a style="pointer-events: none; color: #00aced;"
+                    >@<span sec:authentication="name"></span
+                  ></a>
+                </li>
+                <li sec:authorize="isAuthenticated()">
+                  <a href="../logout">Logout</a>
+                </li>
+                <li sec:authorize="!isAuthenticated()">
+                  <a href="../login">Login</a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
-    </body>
-    </html>
+      </nav>
+    </div>
+  </body>
+</html>
